# mflux

./: .gitignore  CONTRIBUTING.md  Makefile  pyproject.toml
docs/: dreambooth_training.md  vae.md
src/mflux/: memory_utils.py
src/mflux/config/: config.py  model_config.py  runtime_config.py
src/mflux/dreambooth/: dreambooth.py  train_dreambooth.py  training_spec.py  training_state.py
src/mflux/dreambooth/config/: training_config.py
src/mflux/dreambooth/dataset/: batch.py  dataset.py
src/mflux/dreambooth/lora_layers/: lora_layers.py
src/mflux/dreambooth/optimization/: dreambooth_loss.py  loss.py  optimizer.py
src/mflux/dreambooth/utils/: checkpoint_utils.py  dict_utils.py  memory_utils.py
src/mflux/dreambooth_training/: __init__.py  config.py  dataset.py  dreambooth_trainer.py  dummy_vae.py  entrypoint.py  interfaces.py  main.py  model.py  text_encoder_factory.py  tokenizer.py  tokenizer_factory.py  trainer.py  vae_adapter.py  vae_factory.py
src/mflux/dreambooth_training/models/vae/: __init__.py  vae_model.py
src/mflux/flux/: flux.py  transformer.py
src/mflux/models/: text_encoder.py  vae.py
src/mflux/models/text_encoder/: __init__.py  text_encoder.py
src/mflux/models/transformer/: embed_nd.py  joint_attention.py  layer_norm.py  model_config.py  single_block_attention.py  text_embedder.py  time_text_embed.py  transformer.py  transformer_block.py
src/mflux/models/vae/: __init__.py  vae.py
src/mflux/models/vae/encoder/: conv_in.py
src/mflux/nn/: linear.py
src/mflux/utils/: __init__.py  file.py  memory_check.py
tests/: test_dreambooth_training.py  test_trainer.py
