[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mflux"
description = "High-performance Stable Diffusion on Apple Silicon using MLX"
readme = "README.md"
requires-python = ">=3.8"
license = "Apache-2.0"
keywords = ["machine-learning", "deep-learning", "stable-diffusion", "mlx", "apple-silicon"]
authors = [
    { name = "MFLUX Team", email = "contact@mflux.ai" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mlx>=0.0.8",
    "numpy>=1.24.0",
    "pillow>=10.0.0",
    "safetensors>=0.4.0",
    "transformers>=4.35.0",
    "tqdm>=4.66.0",
    "typer>=0.9.0",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-watch>=4.2.0",
    "ruff>=0.1.6",
    "pre-commit>=3.5.0",
    "build>=1.0.3",
]

[project.urls]
Homepage = "https://github.com/yourusername/mflux"
Documentation = "https://mflux.readthedocs.io/"
Repository = "https://github.com/yourusername/mflux.git"
Issues = "https://github.com/yourusername/mflux/issues"

[project.scripts]
mflux-generate = "mflux.cli.generate:main"
mflux-train = "mflux.cli.train:main"
mflux-optimize = "mflux.cli.optimize:main"

[tool.hatch.version]
path = "src/mflux/__about__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/mflux"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
